...
    android:layout_height="300dp"
    android:layout_gravity="center">



    <TextView
        android:id="@+id/element_checklist"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="16dp"
        android:text="@string/checklist"
        android:textSize="18sp"
...
